[package]
name = "arcropolis-core"
version = "0.1.0"
authors = ["Raytwo <raytwost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
jwalk = "0.5.1"
lazy_static = "1.4"
parking_lot = "0.11.0"
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }

[patch.crates-io]
num_cpus = { path = "../../num_cpus" }